# ChangeLog for dev-perl/Perl-Critic
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.74 2011/03/18 08:38:33 tomka Exp $

  18 Mar 2011; Thomas Kahle <tomka@gentoo.org> Perl-Critic-1.111.ebuild:
  x86 stable per bug 352842

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  Perl-Critic-1.113.ebuild:
  Marked ~ppc wrt #355385

*Perl-Critic-1.113 (18 Feb 2011)

  18 Feb 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.113.ebuild:
  Version bump

  10 Feb 2011; Markos Chandras <hwoarang@gentoo.org> Perl-Critic-1.111.ebuild:
  Stable on amd64 wrt bug #352842

*Perl-Critic-1.111 (12 Jan 2011)

  12 Jan 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.111.ebuild:
  Version bump

  20 Oct 2010; Torsten Veller <tove@gentoo.org> -Perl-Critic-1.082.ebuild,
  -Perl-Critic-1.105.ebuild, -Perl-Critic-1.108.ebuild,
  Perl-Critic-1.109.ebuild:
  Cleanup. Add ~ppc to Perl-Critic-1.109 too

  14 Oct 2010; Brent Baude <ranger@gentoo.org> Perl-Critic-1.108.ebuild:
  Marking Perl-Critic-1.108 ~ppc for bug 328393

  10 Oct 2010; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.108.ebuild,
  Perl-Critic-1.109.ebuild:
  Add ~sparc wrt #328393

  03 Sep 2010; Fabian Groffen <grobian@gentoo.org> Perl-Critic-1.109.ebuild:
  Marked ~x86-macos, ~x86-linux, ~sparc-solaris, bug #328393

*Perl-Critic-1.109 (01 Sep 2010)

  01 Sep 2010; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.109.ebuild:
  Version bump

  27 Jul 2010; Fabian Groffen <grobian@gentoo.org> Perl-Critic-1.108.ebuild:
  Marked ~ppc-macos and ~amd64-linux, bug #328393

*Perl-Critic-1.108 (15 Jul 2010)

  15 Jul 2010; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.108.ebuild:
  Version bump

  21 Jun 2010; Raúl Porcel <armin76@gentoo.org> Perl-Critic-1.106.ebuild:
  sparc stable wrt #323529

  15 Jun 2010; Torsten Veller <tove@gentoo.org> Perl-Critic-1.106.ebuild:
  Stable on amd64 and x86 (#323529)
