@@ -1,20 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST Perl-Critic-1.106.tar.gz 565392 RMD160 2121b9bf64d1d19ecc0290c036fb44867b166777 SHA1 571f97eed9436cfbd4d2bfee3677844eac11f42f SHA256 5165a6aa9a5a19d1d10d7206ee1f3bf7f68d738315769beb15ed03ed50fd1ec6
 DIST Perl-Critic-1.109.tar.gz 607958 RMD160 1bf62c3c977400e350163223edc62d6e1f778dc4 SHA1 b1affc5b309e73ff1bda85d138426465b5331f43 SHA256 0193702c2f4b5a142878f0a39724a8005bef344bf53697159875f1264681544e
 DIST Perl-Critic-1.111.tar.gz 608935 RMD160 006d4b61c177767a4aed35b9293404ed385ffc88 SHA1 f48f25b0147bc47f6966af540fab3617883368ee SHA256 a1e1987226fb81ab110cf1d2d1fef2ff698233fbc40c7517b1ee98a127c520c5
 DIST Perl-Critic-1.113.tar.gz 625493 RMD160 ce26ed18f532b0bb9e30fbd088e26c8b82b6555f SHA1 7ab87bc1edec7ddb92e1471dbe7dbaffb60d5a4e SHA256 a7371e62ddc86259658a8a2dcca91a33053d0815c349faf0dbab6e896b4de823
+DIST Perl-Critic-1.114.tar.gz 635185 RMD160 6c9b8b20c2dcd958e6c6e4945a21d43c207127c6 SHA1 33ccda83f66762603fba8940d678b9b44975eeb0 SHA256 5f10ad4ca6f0e28a9324d43836fd9343fca7d3f9c7338038ed228413f6c8abba
 EBUILD Perl-Critic-1.106.ebuild 1083 RMD160 899f858b886f1e5890a279abd97ca296b6f74994 SHA1 e8a73112b38bbf8b280b2a5fd59dccef3a7fb133 SHA256 3284bf90cad6035f87e90751b9bd0e7af46923f75c8154516ef126b799d756a1
 EBUILD Perl-Critic-1.109.ebuild 1141 RMD160 3763d689d161e341ec190deafb8ddd32e4535bba SHA1 929a3568d02b4bf6f88709277e2cd63173af6dac SHA256 3e91a627ecc4560a4c0aafc888fe937bba8f75e9a00573d6c4a27626dfd4ea3a
 EBUILD Perl-Critic-1.111.ebuild 1073 RMD160 5881d53ba80c9b08038579d53cdbfb5a6ad06cd0 SHA1 3417801dd728652cfcea8deeb33e812274be5324 SHA256 9e2b4bc227cbed558a9270fee62b88a6a21601a22c7204cd3ce0dfaea00a624b
 EBUILD Perl-Critic-1.113.ebuild 1064 RMD160 9fc8468c8c14df4ada696b63211abbbd15a7a046 SHA1 73cebea7a3e29f882a9a935594bfea2e382613e3 SHA256 a921c37f52fb3ca732ab74ca8545c9aca31a6b70b3181333db7492a153bfce7e
-MISC ChangeLog 9789 RMD160 0833d36a824fb07ccea7ba29b0cea38e52ea0fe9 SHA1 3eeb9c4e8dde5dc552add4c633a825b1a0f327dc SHA256 587b7654292081abe489b94457f74d19506502b35f5a0f8852dc3096052acb2d
+EBUILD Perl-Critic-1.114.0.ebuild 1060 RMD160 33115bb619b568299ba862191f6d3274d2c65ad6 SHA1 99a6d4bb6f0840f027575ee8ed647435546dc528 SHA256 b46f4f57cdc5b2f624568de10bde7fcfcd8fb9a6ea55c64164939ca8d8cb3d3c
+MISC ChangeLog 9917 RMD160 619cae16aad1a4cd01c378eedba9ac3e91e7eb21 SHA1 777e55988d58ece33c78b39b4238a8402d93d7c9 SHA256 b3273bb7dbc77c76305682d9be8399ca0c6c516034ce26c44867c7303a6a4e11
 MISC metadata.xml 237 RMD160 a473fc004bb82628b431c2c514b498070d33b3ca SHA1 6f06aaaeb3372d8153d3453b9649bdb102d9062f SHA256 ea30df4a6891c660eb6547704e9c9a8b5e8c432a3d3e02b78cb8bff0214da950
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2DGicACgkQnZsgo/h8kNbKKACfaenVAL9hKNHpSvNm5vfkNh5V
-S9sAn1JRlGpwSJlKeRN6SQNBtXwMNvXA
-=OzPw
+iEYEAREIAAYFAk2O3gEACgkQV3J2n04EauztdQCgvsvAhSOkf/NMLbwj+UixgCjK
+mAEAoMWuWCppkE1ZOOD0JYWyK1rkYBw1
+=7mf9
 -----END PGP SIGNATURE-----
