@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Perl-Critic
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.74 2011/03/18 08:38:33 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Perl-Critic/ChangeLog,v 1.75 2011/03/27 06:49:31 tove Exp $
+
+*Perl-Critic-1.114.0 (27 Mar 2011)
+
+  27 Mar 2011; Torsten Veller <tove@gentoo.org> +Perl-Critic-1.114.0.ebuild:
+  Version bump
 
   18 Mar 2011; Thomas Kahle <tomka@gentoo.org> Perl-Critic-1.111.ebuild:
   x86 stable per bug 352842
